[gd_scene load_steps=7 format=3 uid="uid://c5e0ykx6pih6t"]

[ext_resource type="Script" path="res://modules/register/register.gd" id="1_0mryt"]
[ext_resource type="Shader" path="res://modules/login/login.gdshader" id="2_nf7qy"]
[ext_resource type="Texture2D" uid="uid://dx2tkr1bbfa6f" path="res://assets/textures/screen/logo.png" id="3_yij0v"]
[ext_resource type="LabelSettings" uid="uid://cn1sxou71yp4n" path="res://themes/title.tres" id="4_typfn"]
[ext_resource type="PackedScene" uid="uid://c3gvwja61h68n" path="res://modules/http/http.tscn" id="5_76m2s"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nnvmr"]
shader = ExtResource("2_nf7qy")

[node name="Register" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0mryt")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_nnvmr")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0313726, 0.172549, 0.313726, 1)

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(119.5, 24.4375)
scale = Vector2(0.248958, 0.219308)
texture = ExtResource("3_yij0v")

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -33.0
offset_top = 32.0
offset_right = 33.0
offset_bottom = 55.0
grow_horizontal = 2
text = "Iniciar sesión"
label_settings = ExtResource("4_typfn")

[node name="Username" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -29.0
offset_right = 83.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 6
placeholder_text = "Nombre de usuario"

[node name="Email" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -8.0
offset_right = 83.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 6
placeholder_text = "Correo"

[node name="Password" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 12.0
offset_right = 83.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 6
placeholder_text = "Contraseña"
secret = true

[node name="BirthDate" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 32.0
offset_right = 83.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 6
placeholder_text = "Fecha de nacimiento (YYYY-MM-DD)"

[node name="RegisterButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = 52.0
offset_right = 24.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 6
text = "Registrarse"

[node name="OptionsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -13.0
offset_right = 41.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = -5

[node name="Login" type="Button" parent="OptionsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 5
text = "Ya tienes cuenta? Inicia sesión"
flat = true

[node name="Http" parent="." instance=ExtResource("5_76m2s")]
endpoint = "/auth/sign-up"
http_method = 2

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 215.0
offset_top = 144.0
offset_right = 239.0
offset_bottom = 160.0
theme_override_font_sizes/font_size = 5
text = "Volver
"
flat = true

[connection signal="pressed" from="OptionsContainer/Login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
